# zyndai-agent

./: .env.example  .gitignore  pyproject.toml
examples/: StockComparisonAgent.py  StockDataAgent.py  UserAgent.py  agent1.py  agent2.py
examples/identity/: identity_credential1.json
zyndai_agent/: __init__.py  agent.py  base.py
